--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
-# We pretend to be Java because we need GNU Octave which is not 
-# available (as of January 2016)
-language: java
+os: linux
+dist: xenial
+language: general
 
 ###############################################################################
 cache:
@@ -31,7 +31,7 @@ before_install:
   # the version is less the 4.8 and we need to install the image package from
   # Octave Forge (possibly for other packages as well).
   # For now, lets just always say we do need to do this.
-  - UPGRADE_GCC="true"
+  - UPGRADE_GCC="false"
   # ---------------------------------------------------------------------------
   # Add repository for octave
   - travis_retry sudo add-apt-repository -y ppa:octave/stable
